--- a/twapi/doc/versionhistory.man
+++ b/twapi/doc/versionhistory.man
@@ -7,7 +7,7 @@
 [para]
 Summarizes the list of changes for each version of TWAPI.
 
-[section "Version 4.2a8"]
+[section "Version 4.2.12"]
 
 [list_begin bullet]
 
