--- a/twapi/doc/tclwinfaq.org
+++ b/twapi/doc/tclwinfaq.org
@@ -107,6 +107,9 @@
    documentation but also documentation for various extensions and libraries.
    A standalone CHM help file, with similar content, is available from
    the [[#twapi][=TWAPI=]] download area.
+   
+   Several book chapters specific to programming with Tcl on Windows
+   are available [[http://www.magicsplat.com/book/index.html][online]].
 
 ** Is there a Tcl tutorial?
    See the [[http://www.tcl.tk/man/tcl8.5/tutorial/tcltutorial.html][online Tcl tutorial]]. In addition, the [[http://wiki.tcl.tk][Tcler's Wiki]] provides 
@@ -121,20 +124,9 @@
 
 * Installing Tcl
 ** What Tcl distributions are available for Windows?
-   There are several freely downloadable binary distributions of Tcl available:
-   - The most commonly used distribution for Tcl is from
-     [[http://www.activestate.com/activetcl][ActiveState]] which provides both free and commercially supported
-     editions of their Tcl package for multiple platforms. These
-     distributions include libraries and extensions in addition to
-     the Tcl core.
-   - The [[http://tcl.sourceforge.net][Tcl SourceForge download area]] contains Tcl distributions for
-     multiple platforms but does not include extensions and libraries.
-   - The [[http://kitcreator.rkeene.org][KitCreator]] site provides customisable
-     Tcl distributions for download which can optionally include
-     other libraries and extensions. The site also provides
-     [[http://tclkits.rkeene.org/fossil/wiki/Downloads][pre-built executables]].
-   - Builds of daily snapshots are available from [[http://www.patthoyts.tk/tclkit/win32-ix86/daily/][Pat Thoyt's site]].
-     These are single file executables.
+   There are several freely downloadable binary distributions of Tcl available.
+   See the [[http://www.tcl.tk/software/tcltk/bindist.html][Binary Distributions]]
+   page.
 
 ** Are there any single-executable distributions of Tcl?
    There are several distributions of Tcl that consist of a single
