--- a/twapi/doc/crypto.man
+++ b/twapi/doc/crypto.man
@@ -417,6 +417,33 @@ The cipher mode to be used for the operation. See
 [uri #capi_key_mode [cmd capi_key_mode]].
 [list_end]
 
+[call [cmd aes_128] [const iv|encrypt|decrypt] [arg BYTES] [arg CONCEALEDKEY] [opt [arg options]]]
+[call [cmd aes_192] [const iv|encrypt|decrypt] [arg BYTES] [arg CONCEALEDKEY] [opt [arg options]]]
+[call [cmd aes_256] [const iv|encrypt|decrypt] [arg BYTES] [arg CONCEALEDKEY] [opt [arg options]]]
+Implements cryptographic operations using the AES algorithm for
+128, 192 and 256 keys respectively.
+[nl]
+The [cmd iv] subcommand returns a randomly generated
+initialization vector of a suitable length
+for the algorithm. No additional arguments are allowed.
+[nl]
+For [cmd encrypt] and [cmd decrypt] commands,
+[arg BYTES] is the
+binary string to be encrypted or the ciphertext to be decrypted.
+[arg CONCEALEDKEY] is the key in
+[uri base.html#protectingdatainmemory concealed] form. The returned value is
+the encrypted ciphertext or decrypted plaintext respectively.
+
+The following options affect encryption or decryption operation.
+
+[list_begin opt]
+[opt_def [cmd -iv] [arg IV]]
+A binary string to be used as the initialization vector of the operation.
+[opt_def [cmd -mode] [arg MODE]]
+The cipher mode to be used for the operation. See
+[uri #capi_key_mode [cmd capi_key_mode]].
+[list_end]
+
 [call [cmd asn1_encode_string] [arg OID]]
 Returns the specified OID in ASN.1 binary encoded format.
 
@@ -1149,6 +1176,42 @@ and the second is the name of the CSP.
 Returns a list of pairs, each representing a CSP on the system.
 The first element of each pair is a CSP type 
 and the second is the name of the CSP.
+
+
+[call [cmd des] [const iv|encrypt|decrypt] [arg BYTES] [arg CONCEALEDKEY] [opt [arg options]]]
+Implements cryptographic operations using the DES algorithm.
+[nl]
+The [cmd iv] subcommand returns a randomly generated
+initialization vector suitable
+for DES. No additional arguments are allowed.
+[nl]
+For [cmd encrypt] and [cmd decrypt] commands,
+[arg BYTES] is the
+binary string to be encrypted or the ciphertext to be decrypted.
+[arg CONCEALEDKEY] is the DES key in
+[uri base.html#protectingdatainmemory concealed] form. The returned value is
+the encrypted ciphertext or decrypted plaintext respectively.
+
+The following options affect encryption or decryption operation.
+
+[list_begin opt]
+[opt_def [cmd -iv] [arg IV]]
+A binary string to be used as the initialization vector of the operation.
+[opt_def [cmd -mode] [arg MODE]]
+The cipher mode to be used for the operation. See
+[uri #capi_key_mode [cmd capi_key_mode]].
+[list_end]
+
+
+
+
+
+
+
+
+
+
+
 
 [call [cmd hmac] [arg DATA] [arg KEY] [opt [arg PRF]] [opt [arg CHARSET]]]
 Computes the HMAC hash for the specified data [arg DATA].
