--- a/twapi/doc/crypto.man
+++ b/twapi/doc/crypto.man
@@ -7,9 +7,6 @@
 [description]
 [para]
 
-[emph "This module is still experimental and liable to change."]
-
-[para]
 This package provides procedures related to cryptographic services
 provided by the Windows platforms.
 
@@ -26,10 +23,13 @@ in the [uri certs.html Certificates] and [uri sspi.html SSPI] pages.
 [para]
 This documentation expects the reader is familiar with the use of cryptography.
 An overview of the concepts in CAPI is provided but the API itself
-is fairly complex and the reader may wish to
+is fairly complex and
+a series of [uri http://www.magicsplat.com/blog/tags/cryptography/ "blog posts"]
+on the use of these commands may prove useful.
+The reader may also wish to
 refer to the
-[uri http://msdn.microsoft.com/en-us/library/windows/desktop/aa380255(v=vs.85).aspx "Windows SDK CryptoAPI documentation"] for detailed guides
-and reference documentation.
+[uri http://msdn.microsoft.com/en-us/library/windows/desktop/aa380255(v=vs.85).aspx "Windows SDK CryptoAPI documentation"].
+
 
 [section "Cryptographic Service Providers"]
 A Cryptographic Service Providers (CSP) on Windows is a software module that 
@@ -190,6 +190,49 @@ can be imported and exported in a portable format with
 [uri #crypt_public_key_import [cmd crypt_public_key_import]] and
 [uri #crypt_public_key_export [cmd crypt_public_key_export]]
 respectively.
+
+When importing and exporting keys, the keys are passed around as
+_key blobs_. The type and format of a key blob is specified by one of the values in the table below.
+
+[list_begin opt]
+[opt_def [const concealed]] The returned key blob is in the format
+returned by the TWAPI [uri base.html#conceal conceal] command.
+[opt_def [const opaque]] The returned key blob is in a
+format is a vendor-specific format that can only be used with the same CSP.
+[opt_def [const plaintext]] The returned key blob is a
+[const PLAINTEXTKEYBLOB] blob.
+[opt_def [const privatekey]]
+The returned key blob is a [const PRIVATEKEYBLOB] containing the public
+and private keys. If the [cmd -wrapper] option is specified, it must
+be the handle to a symmetric key in which case the blob is encrypted
+with that key.
+[opt_def [const publickey]]
+The returned key blob is a [const PUBLICKEYBLOB] containing the
+public key of a key pair.
+[opt_def [const rfc3217]] The returned key blob is in the format
+specified by RFC3217. Both [arg HKEY] and the wrapping key specified
+by the [cmd -wrapper] option must be symmetric keys.
+[opt_def [const simple]] The returned key blob is a
+[const SIMPLEBLOB] where the symmetric key specified by [arg HKEY]
+is wrapped by a key exchange key specified with the [cmd -wrapper]
+option.
+[list_end]
+
+The details of the format of each of the above, except [const concealed]
+which is TWAPI-specific,
+are described in the
+[uri https://msdn.microsoft.com/en-us/library/windows/desktop/aa375601(v=vs.85).aspx "SDK documentation"]. In addition to [cmd capi_key_export], key blobs
+can be explicitly constructed with the
+[uri #capi_keyblob_create [cmd capi_keyblob_create]] command.
+The commands [uri #capi_keyblob_plaintext [cmd capi_keyblob_plaintext]]
+and [uri #capi_keyblob_concealed [cmd capi_keyblob_concealed]] are shortcuts
+for making key blobs in [const plaintext] and [const concealed] formats.
+Individual
+fields of a key blob can be retrieved through the commands
+[uri #capi_keyblob_version [cmd capi_keyblob_version]],
+[uri #capi_keyblob_type [cmd capi_keyblob_type]],
+[uri #capi_keyblob_algid [cmd capi_keyblob_algid]] and
+[uri #capi_keyblob_blob [cmd capi_keyblob_blob]].
 
 [section "Cryptographic contexts"]
 In order to perform cryptographic operations, an application must
@@ -451,7 +494,7 @@ Returns the specified OID in ASN.1 binary encoded format.
 Returns the specified ASN.1 binary OID in string format.
 
 [call [cmd capi_algid] [arg ALGID]]
-Returns the numeric algorithm identifier for the algorithm [arg ALGID]
+Returns the numeric decimal algorithm identifier for the algorithm [arg ALGID]
 which may be in any of the forms described in
 [sectref "Algorithm identifiers"]. If [arg ALGID] is non-numeric,
 an error is raised if it cannot be mapped to a numeric id.
@@ -628,33 +671,9 @@ The second is the version number of the blob format. The third is a
 reserved value that should be ignored by applications. The
 fourth is the numeric [uri #algorithmidentifiers "algorithm identifier"].
 Finally, the fifth value is a binary key blob
-whose format and structure depends on [arg BLOBTYPE]
-and is described in the
-[uri https://msdn.microsoft.com/en-us/library/windows/desktop/aa375601(v=vs.85).aspx "SDK documentation"].
-The possible values of [arg BLOBTYPE] and corresponding
-formats are shown in the table below. 
+whose format and structure depends on [arg BLOBTYPE].
+See [sectref "Keys and key containers"] for more on key blobs.
 
-[list_begin opt]
-[opt_def [const opaque]] The returned key blob is in a
-format is a vendor-specific format that can only be used with the same CSP.
-[opt_def [const plaintext]] The returned key blob is a
-[const PLAINTEXTKEYBLOB] blob.
-[opt_def [const privatekey]]
-The returned key blob is a [const PRIVATEKEYBLOB] containing the public
-and private keys. If the [cmd -wrapper] option is specified, it must
-be the handle to a symmetric key in which case the blob is encrypted
-with that key.
-[opt_def [const publickey]]
-The returned key blob is a [const PUBLICKEYBLOB] containing the
-public key of a key pair.
-[opt_def [const rfc3217]] The returned key blob is in the format
-specified by RFC3217. Both [arg HKEY] and the wrapping key specified
-by the [cmd -wrapper] option must be symmetric keys.
-[opt_def [const simple]] The returned key blob is a
-[const SIMPLEBLOB] where the symmetric key specified by [arg HKEY]
-is wrapped by a key exchange key specified with the [cmd -wrapper]
-option.
-[list_end]
 
 [call [cmd capi_key_free] [arg HKEY]]
 Frees a handle to a cryptographic key.
@@ -728,6 +747,34 @@ If [arg SALT] is not specified,
 returns a binary string of bytes that are used as the salt value in little
 endian form. If [arg SALT] is specified, it is used as the salt value
 for the key.
+
+[call [cmd capi_keyblob_algid] [arg KEYBLOB]]
+Returns the algorithm associated with a key blob.
+
+[call [cmd capi_keyblob_blob] [arg KEYBLOB]]
+Returns the raw key structures within a key blob.
+
+[call [cmd capi_keyblob_concealed] [arg ALGID] [arg CONCEALEDKEY]]
+
+Constructs and returns a key blob that is of type [const concealed].
+See [sectref "Keys and key containers"] about more on key blobs.
+
+[call [cmd capi_keyblob_create] [arg VER] [arg ALGID] [arg BLOBTYPE] [arg KEYBYTES]]
+
+Constructs and returns a key blob that can be passed to a command such
+as [uri #crypt_import_key [cmd crypt_import_key]]. See
+[sectref "Keys and key containers"] about more on key blobs.
+
+[call [cmd capi_keyblob_plaintext] [arg ALGID] [arg PLAINTEXTKEY]]
+
+Constructs and returns a key blob that is of type [const plaintext].
+See [sectref "Keys and key containers"] about more on key blobs.
+
+[call [cmd capi_keyblob_type] [arg KEYBLOB]]
+Returns the type of a key blob.
+
+[call [cmd capi_keyblob_version] [arg KEYBLOB]]
+Returns the version of a key blob.
 
 [call [cmd capi_parse] [arg BINSTRING] [opt [arg options]]]
 Parses a serialized form of a cryptographic object, stored as a
