Collect coclass guids when importing from typelib and map them to their dispatch interfaces. Add -coclass method to comobjs.

--- a/twapi/doc/base.man
+++ b/twapi/doc/base.man
@@ -266,6 +266,7 @@ are useful for manipulating internal Tcl value types. This is sometimes useful
 and required when dealing with external APIs and data formats like
 [uri com.html#controllingparametertypes "COM"].
 
+[uri #hex [cmd hex]] formats a binary string as a hexadecimal string.
 [uri #hex32 [cmd hex32]] and
 [uri #hex64 [cmd hex64]] format numbers as fixed length
 hexadecimal strings.
@@ -546,6 +547,9 @@ similar to the Tcl [cmd "info patchlevel"] command, for example,
 [const 1.0.2] for final release of version 1.0 patch 2,
 [const 1.0b3] for the third beta release of version 1.0 and
 [const 1.0a3] for the third alpha release of version 1.0.
+
+[call [cmd hex] [arg BIN]]
+Returns the binary string [arg BIN] as a hexadecimal string.
 
 [call [cmd hex32] [arg INT32VAL]]
 Returns [arg INT32VAL] as a fixed width hexadecimal string.
