--- a/twapi/doc/versionhistory.man
+++ b/twapi/doc/versionhistory.man
@@ -32,6 +32,12 @@ Added
 [uri crypto.html#capi_keyblob_type [cmd capi_keyblob_type]],
 [uri crypto.html#capi_keyblob_blob [cmd capi_keyblob_blob]].
 
+[bullet]
+[emph "Incompatible change"]
+The experimental Windows Installer module [cmd twapi_msi] has
+been replaced by a [uri msi.html "new version"] based on the generic COM
+interfaces.
+
 [list_end]
 
 [section "Version 4.2.12"]
