--- a/twapi/doc/pdh.man
+++ b/twapi/doc/pdh.man
@@ -14,7 +14,7 @@ This documentation is reference material for related commands.
 For more introductory material
 and a guide with examples, see the [emph "Performance Monitoring"]
 chapter in the
-[uri http://www.magicsplat.com/book "Tcl on Windows"] online book.
+[uri https://www.magicsplat.com/book "Tcl on Windows"] online book.
 
 [section "Performance Objects"]
 To get a list of performance objects on a system, call
