--- a/twapi/doc/users.man
+++ b/twapi/doc/users.man
@@ -12,7 +12,7 @@ accounts on Windows operating systems.
 This documentation is reference material describing related commands.
 For more introductory material and guide, see the [emph "Windows Security"]
 chapter in the 
-[uri http://www.magicsplat.com/book "Tcl on Windows"] online book.
+[uri https://www.magicsplat.com/book "Tcl on Windows"] online book.
 
 [section "Standard Options"]
 
