--- a/twapi/doc/etw.man
+++ b/twapi/doc/etw.man
@@ -14,7 +14,7 @@ a file or consumed in real time. This module provides access to this facility.
 This documentation is reference material for commands related to ETW.
 For more introductory material
 and a guide with examples, see the [emph "Event Tracing"] chapter in the
-[uri http://www.magicsplat.com/book "Tcl on Windows"] online book.
+[uri https://www.magicsplat.com/book "Tcl on Windows"] online book.
 
 [section "Overview"]
 
