--- a/twapi/doc/services.man
+++ b/twapi/doc/services.man
@@ -14,7 +14,7 @@ in Tcl.
 This documentation is reference material for commands related to
 Windows services. For more introductory material
 and a guide with examples, see the [emph "Windows Services"] chapter in the
-[uri http://www.magicsplat.com/book "Tcl on Windows"] online book.
+[uri https://www.magicsplat.com/book "Tcl on Windows"] online book.
 
 [section "Service Configuration and Monitoring"]
 
